--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "img-loader": "^1.3.1",
     "json-loader": "^0.5.4",
-    "node-sass": "^4.1.1",
+    "node-sass": "^4.2.0",
     "onchange": "^3.2.1",
+    "pug": "^2.0.0-beta6",
+    "pug-loader": "^2.3.0",
     "sass-loader": "^4.1.1",
     "standard": "^8.6.0",
     "style-loader": "^0.13.1",
