--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qliksense-extension",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "A simple boilerplate for writing Qlik Sense extensions in Javascript",
   "scripts": {
     "browser-sync": "node ./browser-sync.js",
@@ -72,6 +72,8 @@
   },
   "dependencies": {
     "angular": "^1.6.1",
+    "bootstrap-sass": "^3.3.7",
+    "bootswatch": "^3.3.7",
     "jquery": "^3.1.1",
     "redux": "^3.6.0"
   }
