--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
+    "file-loader": "https://github.com/webpack/file-loader.git#e308e9e06f3538d00feeddcfd943ead88d806258",
     "html-webpack-plugin": "^2.26.0",
     "img-loader": "^1.3.1",
     "json-loader": "^0.5.4",
@@ -75,6 +75,7 @@
     "bootstrap-sass": "^3.3.7",
     "bootswatch": "^3.3.7",
     "jquery": "^3.1.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "source-sans-pro": "^2.0.10"
   }
 }
