--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
     "angular": "^1.6.1",
     "bootstrap-sass": "^3.3.7",
     "bootswatch": "^3.3.7",
+    "global": "^4.3.1",
     "jquery": "^3.1.1",
+    "pug-bootstrap": "^0.0.10",
     "redux": "^3.6.0",
     "source-sans-pro": "^2.0.10"
   }
